# aiida-phonopy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  PEOPLE.md  README.md  codecov.yaml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.json  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pypi.yml  update_changelog.py  validate_release_tag.py
aiida_phonopy/: __init__.py
aiida_phonopy/calcs/: base.py  phono3py.py  phonopy.py
aiida_phonopy/calculations/: base.py  phonopy.py
aiida_phonopy/calculations/functions/: get_force_sets.py  preprocess.py
aiida_phonopy/calculations/phonopy/: __init__.py  base.py  dos.py  force_constants.py  phono3py.py  phonopy.py  thermal_properties.py
aiida_phonopy/common/: builders.py  file_generators.py  generate_inputs.py  parse_interface.py  raw_parsers.py  utils.py
aiida_phonopy/data/: band_structure.py  force_constants.py  force_sets.py  nac.py  phonon_dos.py
aiida_phonopy/parsers/: phono3py.py  phonopy.py  raw_parsers.py
aiida_phonopy/plugins/jobs/: phonopy.py
aiida_phonopy/plugins/parsers/: phonopy.py
aiida_phonopy/utils/: file_generators.py  resources.py
aiida_phonopy/workchains/: gruneisen.py  optimize.py  phono3_dist.py  phono3py_dist.py  phonon.py  phonon3.py  qha.py  thermal_conductivity.py
aiida_phonopy/workflows/: base.py  force_sets.py  forces.py  gruneisen.py  iter_ha.py  nac.py  nac_params.py  optimize.py  phono3py.py  phono3py_dist.py  phonon.py  phonon3.py  phonopy.py  qha.py  thermal_conductivity.py
aiida_phonopy/workflows/phono3py/: phono3py.py
aiida_phonopy/workflows/phonopy/: base.py  force_set.py  phonopy.py
data/: band_structure.py  force_constants.py  force_sets.py  phonon_dos.py
docs/: Makefile  conf.py  index.rst  install.rst  introduction.rst  phonopy.rst
docs/codes/: index.rst  phono3py.rst  phonopy.rst
docs/data/: band_structure.rst  force_constants.rst  force_sets.rst  index.rst  nac.rst  phonon_dos.rst
docs/plugins/: index.rst  phono3py.rst  phonopy.rst
docs/source/: advanced.ipynb  basic.ipynb  citeus.md  conf.py  index.md  intermediate.ipynb  intermidiate.ipynb  phonopy_ase.ipynb
docs/source/howto/: index.md
docs/source/howto/calculations/: index.rst  phonopy.rst
docs/source/howto/data/: force_constants.rst  index.rst  phonopy.rst  preprocess.rst
docs/source/howto/workflows/: index.rst  phonopy.rst
docs/source/installation/: index.md
docs/source/local_module/: __init__.py  temp_profile.py
docs/source/reference/: index.md
docs/source/reference/api/: index.rst
docs/source/reference/api/aiida_phonopy/: index.rst
docs/source/topics/calculations/: index.rst  phonopy.rst
docs/source/topics/workflows/: index.rst  phonopy.rst
docs/source/tutorials/: advanced.ipynb  advanced.md  basic.ipynb  basic.md  index.md  intermidiate.ipynb  intermidiate.md
docs/source/tutorials/include/: run_phonopy_basic.py
docs/workchains/: index.rst  wc_gruneisen.rst  wc_phono3py_dist.rst  wc_phonon.rst  wc_phonon3.rst  wc_qha.rst  wc_thermal_conductivity.rst
examples/: dump_phonopy_yaml.py  launch_iterHA_SrTiO3.py  launch_phonon_NaCl.py  phonopy_ase.ipynb
examples/BaTiO3/: phonopy.yaml  script.py
examples/BaTiO3/ref_out/: aiida.in  aiida.out  force_constants.hdf5  irreps.yaml  mesh.hdf5  phonopy.yaml  thermal_properties.yaml
examples/Si/: preprocess.ipynb
examples/plugins/: FORCE_SETS  launch_phono3py_si.py  launch_phonopy_gan.py  launch_phonopy_gan_dos.py  launch_phonopy_gan_fc.py  launch_phonopy_gan_tp.py  launch_phonopy_mgo.py  launch_phonopy_si.py
examples/plugins/MgO/: FORCE_CONSTANTS
examples/tools/: get_phono3py_inputs.py  get_thermal_conductivity.py  plot_gruneisen.py  plot_phonon.py  plot_thermal_conductivity.py
examples/workchains/: generate-launchfile-note.ipynb  generate_launchfile_thermal.py  launch_gruneisen_gan.py  launch_gruneisen_mgo_born.py  launch_optimize_gan.py  launch_phono3_dist_si.py  launch_phono3py_dist_si.py  launch_phono3py_mgo.py  launch_phono3py_si.py  launch_phonon3_gan.py  launch_phonon3_mgo.py  launch_phonon3_si.py  launch_phonon_gan.py  launch_phonon_mgo_born.py  launch_phonon_mp.py  launch_phonon_si.py  launch_qha_mgo_born.py  launch_qha_si.py  launch_thermal_si.py
plugins/jobs/: phonopy.py
plugins/launcher/: launch_phonopy_gan.py
plugins/parsers/: phonopy.py
src/aiida_phonopy/: __init__.py
src/aiida_phonopy/calculations/: phonopy.py
src/aiida_phonopy/calculations/functions/: __init__.py  data_utils.py  get_outputs.py  link_structures.py
src/aiida_phonopy/data/: __init__.py  force_constants.py  phonopy.py  preprocess.py  raw.py  resbands.py
src/aiida_phonopy/parsers/: __init__.py  base.py  phonopy.py
src/aiida_phonopy/parsers/raw_parsers/: phonopy.py
src/aiida_phonopy/utils/: file_generators.py  mapping.py  resources.py  validators.py
src/aiida_phonopy/workflows/: ase.py  phonopy.py
test/launcher/: launch_gruneisen_gan.py  launch_optimize_gan.py  launch_phonon_mgo_born.py
tests/: conftest.py
tests/calculations/: test_phonopy.py  test_phonopypp.py
tests/calculations/functions/: test_data_utils.py  test_get_force_sets.py
tests/data/: test_phonopy_data.py  test_preprocess_data.py  test_raw_data.py
tests/fixtures/phonopy/: FORCE_SETS
tests/parsers/: test_phonopy.py  test_phonopypp_parser.py
tests/parsers/fixtures/phonopy/default_bands/: aiida.out  band.hdf5  phonopy.yaml
tests/parsers/fixtures/phonopy/default_dos/: aiida.out  phonopy.yaml
tests/utils/: __init__.py  test_validator.py
tests/workflows/: __init__.py  old.test_phonopy.py  test_ase.py  test_force_set.py
workchains/: generate_inputs.py  parse_interface.py  wc_gruneisen.py  wc_optimize.py  wc_phonon.py
workchains/launcher/: launch_gruneisen_gan.py  launch_gruneisen_mgo_born.py  launch_optimize_gan.py  launch_optimize_gan_qe.py  launch_phonon_gan.py  launch_phonon_gan_qe.py  launch_phonon_mgo_born.py
workchains/tools/: plot_gruneisen.py  plot_phonon.py
(+38 files in other folders)
